Исправления после cross-review